--- a/Areas/Admin/Views/DotXetTuyens/CollegerIndex.cshtml
+++ b/Areas/Admin/Views/DotXetTuyens/CollegerIndex.cshtml
@@ -75,10 +75,11 @@
                                     }
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Dxt_ThoiGian_BatDau)
+                                    <label>@Convert.ToDateTime(item.Dxt_ThoiGian_BatDau).ToString("dd/MM/yyyy")</label>
+                                  
                                 </td>
                                 <td>
-                                    @Html.DisplayFor(modelItem => item.Dxt_ThoiGian_KetThuc)
+                                    <label>@Convert.ToDateTime(item.Dxt_ThoiGian_KetThuc).ToString("dd/MM/yyyy")</label>                                   
                                 </td>
                                 <td>
                                     @Html.DisplayFor(modelItem => item.Dxt_GhiChu)
@@ -230,6 +231,7 @@
         })
     })
     function UpdateDotXetTuyen(idDotXetTuyen, key_update, classify) {
+        OnResetControll();
         $('#hidden_Dxt_ID').val(idDotXetTuyen);
         $('#hidden_Check_Func').val(key_update);
         $('#hidden_Dxt_Classify').val(classify);
@@ -244,8 +246,29 @@
             DotXetTuyetGetNhht();
             $('#bt_add_ok_modalupdate').show();
             $('#bt_edit_ok_modalupdate').hide();
-            $('#modal_update_data').modal('show');
+            $('#modal_update_data').modal('show');          
         }
+    }
+    function OnInputChangeDxt() {
+
+        if ($('#Dxt_Ten').val() != "" && $('#Dxt_ThoiGian_BatDau').val() != "" && $('#Dxt_ThoiGian_KetThuc').val() != "") {
+            let txt_start = parseDatetoString($('#Dxt_ThoiGian_BatDau').val());
+            let txt_end = parseDatetoString($('#Dxt_ThoiGian_KetThuc').val());
+
+            let GhiChu_input = 'XTĐH - ' + $('#Dxt_Ten').val() + ', từ ' + txt_start + ' đến ' + txt_end;
+            $('#Dxt_GhiChu').val(GhiChu_input);
+            $('#Error_Dxt_GhiChu').text('');
+        }
+        else {
+            $('#Dxt_GhiChu').val('');
+            $('#Error_Dxt_GhiChu').text('Chưa nhập đủ thông tin');
+        }
+    }
+    function OnResetControll() {
+        $('#Dxt_Ten').val('');
+        $('#Dxt_ThoiGian_BatDau').val('');
+        $('#Dxt_ThoiGian_KetThuc').val('');
+        $('#Dxt_GhiChu').val('');
     }
     function DeleteDotXetTuyen(ID) {
         $('#hidden_Dxt_ID').val(ID);
@@ -272,12 +295,10 @@
                 console.log(err.responseText);
             }
         });
-
     }
 </script>
 <script>
     $(document).ready(function () {
-
         $('#bt_edit_ok_modalupdate').click(function () {
             DotXetTuyenEdit()
         });
@@ -332,6 +353,7 @@
         });
     }
     function DotXetTuyenAdd() {
+
         var flag = true;
         let _namHoc_ID = $('#NamHoc_ID').val();
 
@@ -431,6 +453,11 @@
         var mdy = str.split('-');
         return new Date(mdy[0], mdy[1], mdy[2]);
     }
+    function parseDatetoString(str) {
+        var arr_time = str.split('-');
+        var str_time = arr_time[2] + '/' + arr_time[1] + '/' + arr_time[0];        
+        return str_time;
+    }
     function hideErrorMessage(input) {
         var errorContainer = input.next('.text-danger');
         errorContainer.text('');
@@ -461,7 +488,7 @@
                         <div class="form-group">
                             <label class="control-label col-md-12">Tên đợt</label>
                             <div class="col-md-12">
-                                <input type="text" name="Dxt_Ten" id="Dxt_Ten" class="form-control" />
+                                <input type="text" name="Dxt_Ten" id="Dxt_Ten" class="form-control" placeholder="Đợt 1" onkeyup="OnInputChangeDxt()"/>
                                 <span id="Error_Dxt_Ten" class="small mb-1 text-danger"></span>
                             </div>
                         </div>
@@ -470,7 +497,7 @@
                         <div class="form-group">
                             <label class="control-label col-md-12">Ghi chú</label>
                             <div class="col-md-12">
-                                <input type="text" name="Dxt_GhiChu" id="Dxt_GhiChu" class="form-control" placeholder="Tuyển sinh Sau đại học" value="Tuyển sinh Sau đại học" />
+                                <input type="text" name="Dxt_GhiChu" id="Dxt_GhiChu" class="form-control"  placeholder="Đợt 1, thời gian từ 01/07/2023 đến 15/11/2023" disabled/>
                                 <span id="Error_Dxt_GhiChu" class="small mb-1 text-danger"></span>
                             </div>
                         </div>
@@ -479,7 +506,7 @@
                         <div class="form-group">
                             <label class="control-label col-md-12">Thời gian bắt đầu</label>
                             <div class="col-md-12">
-                                <input type="date" name="Dxt_ThoiGian_BatDau" id="Dxt_ThoiGian_BatDau" class="form-control" />
+                                <input type="date" name="Dxt_ThoiGian_BatDau" id="Dxt_ThoiGian_BatDau" onchange="OnInputChangeDxt()" class="form-control"  />
                                 <span id="Error_Dxt_ThoiGian_BatDau" class="small mb-1 text-danger"></span>
                             </div>
                         </div>
@@ -488,7 +515,7 @@
                         <div class="form-group">
                             <label class="control-label col-md-12">Thời gian kết thúc</label>
                             <div class="col-md-12">
-                                <input type="date" name="Dxt_ThoiGian_KetThuc" id="Dxt_ThoiGian_KetThuc" class="form-control" />
+                                <input type="date" name="Dxt_ThoiGian_KetThuc" id="Dxt_ThoiGian_KetThuc" class="form-control" onchange="OnInputChangeDxt()" />
                                 <span id="Error_Dxt_ThoiGian_KetThuc" class="small mb-1 text-danger"></span>
                             </div>
                         </div>
