--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -138,7 +138,7 @@
                             <nav class="sidenav-menu-nested">
                                 <a class="nav-link " href="@Url.Action("Index", "Namhocs")">Năm học</a>
                                 <a class="nav-link" href="@Url.Action("CollegerIndex", "DotXetTuyens")">Đợt xét tuyển</a>
-                                <a class="nav-link" href="@Url.Action("CollegerIndex", "DotXetTuyens")">Đợt dự thi NK</a>
+                                <a class="nav-link" href="@Url.Action("GiftedIndex", "DotXetTuyens")">Đợt dự thi năng khiếu</a>
                                 <a class="nav-link" href="@Url.Action("Index", "PhuongThucXetTuyens")">Phương thức xét</a>
                                 @*<a class="nav-link" href="@Url.Action("Index", "KhoiNganhs")">Khối nghành</a>*@
                                 <a class="nav-link" href="@Url.Action("Index", "KhuVucs")">Khu vực</a>
