--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -125,13 +125,10 @@
                             <div class="nav-link-icon"><i data-feather="pocket"></i></div>
                             Đăng ký thi năng khiếu
                         </a>
+                       
                         <a class="nav-link" href="@Url.Action("Index", "LePhiXetTuyens")">
                             <div class="nav-link-icon"><i data-feather="package"></i></div>
-                            Thông tin hồ sơ các nguyện vọng đã nộp
-                        </a>
-                        <a class="nav-link" href="@Url.Action("Index", "LePhiXetTuyens")">
-                            <div class="nav-link-icon"><i data-feather="package"></i></div>
-                            Thông tin nộp lệ phí các nguyện vọng đã nộp
+                            Thông tin kết quả hồ sơ các nguyện vọng đã nộp
                         </a>
                         @*<a class="nav-link" href="@Url.Action("Index", "KetQuaXetTuyens")">
             <div class="nav-link-icon"><i data-feather="filter"></i></div>
